[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto4py"
version = "2.0.0"
description = "Python port of CryptoJS - standard and secure cryptographic algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["crypto", "cryptography", "hash", "aes", "md5", "sha256", "hmac"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/davidjohhon/crypto-py"
Source = "https://github.com/davidjohhon/crypto-py"

[tool.setuptools.packages.find]
where = ["src"]
