[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto4py"
version = "2.0.6"
description = "CryptoPy — standard and secure cryptographic algorithms, Python port of CryptoJS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = [
    "crypto", "cryptography", "cryptojs", "crypto-js", "cryptopy",
    "hash", "digest", "md5", "sha1", "sha256", "sha512", "sha3",
    "hmac", "pbkdf2", "aes", "des", "tripledes",
    "rsa", "pkcs1", "asymmetric", "encryption", "signature",
    "sm2", "sm3", "sm4", "sm9", "zuc", "chinese", "gmssl",
    "identity-based", "bilinear-pairing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/davidjohhon/crypto-py"
Source = "https://github.com/davidjohhon/crypto-py"

[tool.setuptools.packages.find]
where = ["src"]
